...
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="I am Data Input"
        android:id="@+id/textView6"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />
    <EditText
        android:id="@+id/editInputTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="Title Input"
        android:textSize="22sp"
        android:layout_below="@+id/textView6"
        android:layout_alignStart="@+id/buResetData" />
    <EditText
        android:id="@+id/editInputPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="Title Price"
        android:textSize="22sp"
        android:layout_below="@+id/editInputTitle"
        android:layout_alignStart="@+id/editInputTitle" />
...
