<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1"
    android:background="@drawable/back_ground">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Home"
        android:id="@+id/textView5"
        android:layout_gravity="center_horizontal"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <!--<ImageView-->
        <!--android:layout_width="160dp"-->
        <!--android:layout_height="200dp"-->
        <!--android:id="@+id/imageView"-->
        <!--android:scaleType="fitXY"-->
        <!--android:layout_gravity="center_horizontal"-->
        <!--android:src="@drawable/high"-->
        <!--android:layout_weight="0.12" />-->

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Shopping List Input"
        android:id="@+id/shoppingListInput"
        android:layout_gravity="center_horizontal"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

</RelativeLayout>